--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://florianstrob.github.io/florianstrob
+url: https://florianstrob.github.io/
 baseurl: /agency-jekyll-theme/
 
 # Site settings
