--- a/_data/template.yml
+++ b/_data/template.yml
@@ -7,5 +7,5 @@ color:
 
 # Font Families
 font:
-  primary: 'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
-  secondary: '"Droid Serif", "Helvetica Neue", Helvetica,Arial,sans-serif'
+  primary: 'Inconsolata, "Helvetica Neue",Helvetica,Arial,sans-serif'
+  secondary: 'Inconsolata, "Droid Serif", "Helvetica Neue", Helvetica,Arial,sans-serif'
