--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ people:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: linkedin
-    url: http://twitter.com/jekyllrb
+    url: https://www.linkedin.com/in/florian-strob/
 
 # Build settings
 markdown: kramdown
