--- a/_data/template.yml
+++ b/_data/template.yml
@@ -8,4 +8,4 @@ color:
 # Font Families
 font:
   primary: 'Inconsolata, "Helvetica Neue",Helvetica,Arial,sans-serif'
-  secondary: 'Inconsolata, "Droid Serif", "Helvetica Neue", Helvetica,Arial,sans-serif'
+  secondary: '"Playfair Display",serif'
