--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ social:
     url: https://www.linkedin.com/in/florian-strob/
   - title: twitter
     url: https://twitter.com/florian_strob
-
+  - title: envelope-o
+    url: mailto:hello@florianstrob.com
 # Build settings
 markdown: kramdown
 permalink: pretty
