--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ description: "Portfolio"
 social:
   - title: linkedin
     url: https://www.linkedin.com/in/florian-strob/
+  - title: instagram
+  url: https://www.instagram.com/florianstrob/  
   - title: envelope-o
     url: mailto:hello@florianstrob.com
 # Build settings
